syntax = "proto3";

package plugins;

import "github.com/networkservicemesh/networkservicemesh/controlplane/pkg/apis/local/connection/connection.proto";
import "github.com/networkservicemesh/networkservicemesh/controlplane/pkg/apis/remote/connection/connection.proto";

message ConnectionInfo {
    oneof conn {
        local.connection.Connection local_connection = 1;
        remote.connection.Connection remote_connection = 2;
    }
}

enum ConnectionValidationStatus {
    SUCCESS = 0;
    FAIL = 1;
}

message ConnectionValidationResult {
    ConnectionValidationStatus status = 1;
    string error_message = 2;
}

service ConnectionPlugin {
    rpc UpdateConnection (ConnectionInfo) returns (ConnectionInfo);
    rpc ValidateConnection (ConnectionInfo) returns (ConnectionValidationResult);
}
